--- a/.github/workflows/pull-request-callable.yml
+++ b/.github/workflows/pull-request-callable.yml
@@ -328,9 +328,9 @@ jobs:
         run: |
           MATRIX=[]
           function jq_add_step {
-            MATRIX=$(echo $MATRIX | jq -c --arg name "$1" --arg cmd "$2" --arg artifact-name "$3" --arg artifact-path "$4" \
-              --arg artifact-overwrite "$5" --arg artifact-if-no-files-found "$6" --arg artifact-retention-days "$7" \
-              '. + [{name: $name, command: $cmd, artifact-name: $artifact-name, artifact-path: $artifact-path, artifact-overwrite: $artifact-overwrite, artifact-if-no-files-found: $artifact-if-no-files-found, artifact-retention-days: $artifact-retention-days}]')
+            MATRIX=$(echo $MATRIX | jq -c --arg name "$1" --arg cmd "$2" --arg artifact_name "$3" --arg artifact_path "$4" \
+              --arg artifact_overwrite "$5" --arg artifact_if_no_files_found "$6" --arg artifact_retention_days "$7" \
+              '. + [{name: $name, command: $cmd, artifact-name: $artifact_name, artifact-path: $artifact_path, artifact-overwrite: $artifact_overwrite, artifact-if-no-files-found: $artifact_if_no_files_found, artifact-retention-days: $artifact_retention_days}]')
           }
           jq_add_step "Test" "${{ inputs.test-command }}" "${{ inputs.test-artifact-name }}" "${{ inputs.test-artifact-path }}" \
             "${{ inputs.test-artifact-overwrite }}" "${{ inputs.test-artifact-if-no-files-found }}" "${{ inputs.test-artifact-retention-days }}"
