--- a/.github/workflows/pull-request-callable.yml
+++ b/.github/workflows/pull-request-callable.yml
@@ -263,8 +263,8 @@ jobs:
     runs-on: ${{ inputs.runner-default }}
     outputs:
       version: ${{ steps.set_version.outputs.version }}
-      pre-steps: ${{ steps.set_pre_matrix.outputs.matrix }}
-      post-steps: ${{ steps.set_post_matrix.outputs.matrix }}
+      pre-step-matrix: ${{ steps.set_pre_matrix.outputs.matrix }}
+      post-steps-matrix: ${{ steps.set_post_matrix.outputs.matrix }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -330,7 +330,7 @@ jobs:
           function jq_add_step {
             MATRIX=$(echo $MATRIX | jq -c --arg name "$1" --arg cmd "$2" --arg artifact_name "$3" --arg artifact_path "$4" \
               --arg artifact_overwrite "$5" --arg artifact_if_no_files_found "$6" --arg artifact_retention_days "$7" \
-              '. + [{name: $name, command: $cmd, artifact_name: $artifact_name, artifact_path: $artifact_path, artifact_overwrite: $artifact_overwrite, artifact_if_no_files_found: $artifact_if_no_files_found, artifact_retention_days: $artifact_retention_days}]')
+              '. + [{name: $name, command: $cmd, artifact-name: $artifact_name, artifact-path: $artifact_path, artifact-overwrite: $artifact_overwrite, artifact-if-no-files-found: $artifact_if_no_files_found, artifact-retention-days: $artifact_retention_days}]')
           }
           jq_add_step "Test" "${{ inputs.test-command }}" "${{ inputs.test-artifact-name }}" "${{ inputs.test-artifact-path }}" \
             "${{ inputs.test-artifact-overwrite }}" "${{ inputs.test-artifact-if-no-files-found }}" "${{ inputs.test-artifact-retention-days }}"
@@ -375,7 +375,7 @@ jobs:
     runs-on: ${{ inputs.runner-default }}
     strategy:
       matrix:
-        pre-steps: ${{ fromJson(needs.version.outputs.pre-steps) }}
+        pre-steps: ${{ fromJson(needs.version.outputs.pre-steps-matrix) }}
     steps:
       - name: Download updated source
         uses: eviden-actions/download-artifact@v2
@@ -476,7 +476,7 @@ jobs:
     runs-on: ${{ inputs.runner-default }}
     strategy:
       matrix:
-        post-steps: ${{ fromJson(needs.version.outputs.post-steps) }}
+        post-steps: ${{ fromJson(needs.version.outputs.post-steps-matrix) }}
     steps:
       - name: Download updated source
         uses: eviden-actions/download-artifact@v2
