--- a/.github/workflows/pull-request-callable.yml
+++ b/.github/workflows/pull-request-callable.yml
@@ -376,7 +376,7 @@ jobs:
   pre-steps:
     name: Pre-Build Steps
     needs: prepare
-    if: ${{ needs.prepare.outputs.pre-step-matrix != '' && toJson(fromJson(needs.prepare.outputs.pre-step-matrix) != '[]' }}
+    if: ${{ needs.prepare.outputs.pre-step-matrix != '' && toJson(fromJson(needs.prepare.outputs.pre-step-matrix)) != '[]' }}
     runs-on: ${{ inputs.runner-default }}
     strategy:
       matrix:
@@ -478,7 +478,7 @@ jobs:
   post-steps:
     name: Post-Build Steps
     needs: image-merge
-    if: ${{ needs.prepare.outputs.post-step-matrix != '' && toJson(fromJson(needs.prepare.outputs.post-step-matrix) != '[]' }}
+    if: ${{ needs.prepare.outputs.post-step-matrix != '' && toJson(fromJson(needs.prepare.outputs.post-step-matrix)) != '[]' }}
     runs-on: ${{ inputs.runner-default }}
     strategy:
       matrix:
